--- a/PaperMe.html
+++ b/PaperMe.html
@@ -20,7 +20,7 @@
                     <input type="text" id="theme" class="pure-input-1">
                     <h2>More Options</h2>
                     <h3>Resolution</h3>
-                    <input type="text" id="width" class="pure-input-1-3"> x <input type="text" id="height" class="pure-input-1-3"> <input type="checkbox" id="larger"> or larger
+                    <input type="text" id="width" class="pure-input-1-3"> x <input type="text" id="height" class="pure-input-1-3"> <input type="checkbox" id="larger" value="checked" checked> or larger
                     <h3>Color</h3>
                     <input type="checkbox" id="black">
                     <input type="checkbox" id="white">
