--- a/PaperMe.html
+++ b/PaperMe.html
@@ -20,17 +20,24 @@
                     <input type="text" id="theme" class="pure-input-1">
                     <h2>More Options</h2>
                     <h3>Resolution</h3>
-                    <input type="text" id="width" class="pure-input-1-3"> x <input type="text" id="height" class="pure-input-1-3"> <input type="checkbox" id="larger" value="checked" checked> or larger
+                    <input type="text" id="width" class="pure-input-1-3"> x <input type="text" id="height" class="pure-input-1-3"> <input type="checkbox" id="larger" checked> or larger
                     <h3>Color</h3>
-                    <input type="checkbox" id="black">
-                    <input type="checkbox" id="white">
+                    <span>
+                        <input type="radio" name="color" value="black and white" class="bw-button">
+                        <input type="radio" name="color" value="red" class="red-button">
+                        <input type="radio" name="color" value="orange" class="orange-button">
+                        <input type="radio" name="color" value="yellow" class="yellow-button">
+                        <input type="radio" name="color" value="green" class="green-button">
+                        <input type="radio" name="color" value="blue" class="blue-button">
+                        <input type="radio" name="color" value="purple" class="purple-button">
+                        <input type="radio" name="color" value="pink" class="pink-button">
+                        <input type="radio" name="color" value="any" checked> Any
                     <h3>Website</h3>
                     <input type="text" id="website" class="pure-input-1">
                     <h3>File Formats</h3>
-                    <input type="checkbox" id="PNG"> PNG <input type="checkbox" id="JPEG"> JPEG
+                    <input type="checkbox" id="PNG" checked> PNG <input type="checkbox" id="JPEG" checked> JPEG
                     <br>
                     <br>
-                    <input type="checkbox"> NSFW
                     <button type="submit" class="pure-button pure-button-primary">Paper Me!</button>
 
                 </form>
