--- a/PaperMe.html
+++ b/PaperMe.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--Pure CSS-->
         <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous"></link>
+        <!--Personal CSS-->
+        <link rel="stylesheet" href="./PaperMe.css"></link>
         <!--JQuery-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <!--My Own Code-->
@@ -22,16 +24,15 @@
                     <h3>Resolution</h3>
                     <input type="text" id="width" class="pure-input-1-3"> x <input type="text" id="height" class="pure-input-1-3"> <input type="checkbox" id="larger" checked> or larger
                     <h3>Color</h3>
-                    <span>
-                        <input type="radio" name="color" value="black and white" class="bw-button">
-                        <input type="radio" name="color" value="red" class="red-button">
-                        <input type="radio" name="color" value="orange" class="orange-button">
-                        <input type="radio" name="color" value="yellow" class="yellow-button">
-                        <input type="radio" name="color" value="green" class="green-button">
-                        <input type="radio" name="color" value="blue" class="blue-button">
-                        <input type="radio" name="color" value="purple" class="purple-button">
-                        <input type="radio" name="color" value="pink" class="pink-button">
-                        <input type="radio" name="color" value="any" checked> Any
+                        <button  class="color-button bw-button" type="button"></button>
+                        <button class="color-button red-button" type="button"></button>
+                        <button class="color-button orange-button" type="button"></button>
+                        <button class="color-button yellow-button" type="button"></button>
+                        <button class="color-button green-button" type="button"></button>
+                        <button class="color-button blue-button" type="button"></button>
+                        <button class="color-button purple-button" type="button"></button>
+                        <button class="color-button pink-button" type="button"></button>
+                        <button class="np-button" type="button">No Preference</button>
                     <h3>Website</h3>
                     <input type="text" id="website" class="pure-input-1">
                     <h3>File Formats</h3>
