--- a/PaperMe.html
+++ b/PaperMe.html
@@ -19,7 +19,7 @@
             <div class="pure-u-1-3" id="Options">
                 <form id="userOptions" class="pure-form">
                     <h1>Choose a theme</h1>
-                    <input type="text" id="theme" class="pure-input-1">
+                    <input type="text" id="theme" class="pure-input-2-3">
                     <h2>More Options</h2>
                     <h3>Resolution</h3>
                     <input type="text" id="width" class="pure-input-1-3"> x <input type="text" id="height" class="pure-input-1-3"> <input type="checkbox" id="larger" checked> or larger
@@ -34,7 +34,7 @@
                         <button class="color-button pink-button" type="button"></button>
                         <button class="np-button" type="button">No Preference</button>
                     <h3>Website</h3>
-                    <input type="text" id="website" class="pure-input-1">
+                    <input type="text" id="website" class="pure-input-2-3">
                     <h3>File Formats</h3>
                     <input type="checkbox" id="PNG" checked> PNG <input type="checkbox" id="JPEG" checked> JPEG
                     <br>
